--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 .tmux/resurrect/*
 Session.vim
+.DS_Store
+## vim Vundle
+# ignore everything
+/vim/.vim/bundle/*
+# except Vundle itself
+!/vim/.vim/bundle/Vundle.vim
+
+
