--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,16 @@
-set -g default-terminal "xterm-256color"
 if-shell "test -f ~/.tmux_theme" "source ~/.tmux_theme"
-if-shell "uname | grep -q Darwin" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-setw -g mode-keys vi
-unbind %
+#if-shell "uname | grep -q Darwin" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
+#setw -g mode-mouse on
+#set -g mouse-select-pane on
+#set -g mouse-resize-pane on
+#set -g mouse-select-window on
+set -g prefix C-a 
+set -g mode-keys vi
+set -g status-keys vi
+#set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+
+#unbind %
 bind | split-window -h
 bind - split-window -v
 bind-key k select-pane -U
@@ -14,13 +18,13 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
-set -g @tpm_plugins ' \
-  tmux-plugins/tpm \
-  tmux-plugins/tmux-sensible \
-  tmux-plugins/tmux-resurrect \
-'
+#set -g @tpm_plugins ' \
+#  tmux-plugins/tpm \
+#  tmux-plugins/tmux-sensible \
+#  tmux-plugins/tmux-resurrect \
+#'
 
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-save-bash-history 'on'
+#set -g @resurrect-strategy-vim 'session'
+#set -g @resurrect-save-bash-history 'on'
 
-run-shell '~/.tmux/plugins/tpm/tpm'
+#run-shell '~/.tmux/plugins/tpm/tpm'
